=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.1
 - Fixed: [ 2639453 ] Place check indicating X is difficult to tell the colour (fisharebest)
 - Changed: Add option to sort Manage Media list and MultiMedia list (canajun2eh)
 - Fixed: [ 2612938 ] 4.2.1 svn rev.5059 - Translation error (fisharebest)
 - Fixed: [ 2608286 ] Copy EVENT causes error in option field (fisharebest)
 - Fixed: [ 2556004 ] 4.2.0 - Reports without data output (fisharebest)
 - Fixed: [ 2562498 ] 4993 General Search - last change (fisharebest)
 - Fixed: [ 2555000 ] 4.2 Anniversary Calendar no privacy rules (fisharebest)
 - Added: [ 2522082 ] Go To Merged Record (fisharebest)
 - Added: [ 2580275 ] 4.2 R.A. improved functionality for Autosearch on Ancestry (erostew/fisharebest)
 - Fixed: [ 2567372 ] Admin does not always see changes to approve correctly (fisharebest)
 - Fixed: [ 2328664 ] Research Assistent (fisharebest)
 - Added: Support for Serbian (Latin alphabet) (canajun2eh)
 - Fixed: [ 2534707 ] [4897] MARR source not added when date is missing. (fisharebest)
 - Fixed: [ 2567389 ] "Media Viewer using full GEDCOM Media URL"; Also "source.php error with Lightbox"; (windmillway)
 - Changed: Removed "Update Photo" option from Quick Update (canajun2eh)
 - Changed: Improved user interface in Manage Media (canajun2eh)
 - Fixed: [ 2580303 ] GoogleMap - Add place not working in FireFox (wooc)
 - Added: .wmv support to JWplayer module. (windmillway)
 - Fixed: [ 2116080 ] [3870] Favourites missing from Xenea (wooc)
 - Fixed: [ 2477810 ] Media Title Not Displaying on mediaviewer.php (canajun2eh)
 - Fixed: [ 2350355 ] PGV 4.1.6 "Printer-friendly version" (wooc)
 - Fixed: [ 2556175 ] Error 2 w Edit geographic place locations (wooc)